[package]
name = "bitcoin-address-book"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
name = "bitcoin_address_book"
path = "src/lib.rs"

[dependencies]
p2p = { package = "bitcoin-p2p-messages",  git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
