[package]
name = "bitcoin-address-book"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Network address manager for Bitcoin clients."
repository = "https://github.com/2140-dev/bitcoin-address-book"
keywords = ["bitcoin", "cryptography", "network", "peer-to-peer"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.84"

[lib]
name = "bitcoin_address_book"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.32.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
